Fixed bug causing subtitle to spill out of it's container

--- a/static/search.less
+++ b/static/search.less
@@ -85,6 +85,7 @@
 					color: @link-color;
 					padding-bottom:0;
 					display: inline-block;
+					width: 100%;
 					&:hover {
 						text-decoration: none;
 					}
